sql/sp.cc
@@ -388,7 +388,7 @@ db_find_routine(THD *thd, int type, sp_name *name, sp_head **sphp)
   uint length;
   char buff[65];
   String str(buff, sizeof(buff), &my_charset_bin);
-  ulong sql_mode;
+  ulong sql_mode, saved_mode= thd->variables.sql_mode;
   Open_tables_state open_tables_state_backup;
   Stored_program_creation_ctx *creation_ctx;
 
@@ -399,6 +399,9 @@ db_find_routine(THD *thd, int type, sp_name *name, sp_head **sphp)
   *sphp= 0;                                     // In case of errors
   if (!(table= open_proc_table_for_read(thd, &open_tables_state_backup)))
     DBUG_RETURN(SP_OPEN_TABLE_FAILED);
+
+  /* Reset sql_mode during data dictionary operations. */
+  thd->variables.sql_mode= 0;
 
   if ((ret= db_find_routine_aux(thd, type, name, table)) != SP_OK)
     goto done;
@@ -503,6 +506,7 @@ db_find_routine(THD *thd, int type, sp_name *name, sp_head **sphp)
  done:
   if (table)
     close_system_tables(thd, &open_tables_state_backup);
+  thd->variables.sql_mode= saved_mode;
   DBUG_RETURN(ret);
 }
 
@@ -675,6 +679,7 @@ sp_create_routine(THD *thd, int type, sp_head *sp)
   int ret;
   TABLE *table;
   char definer[USER_HOST_BUFF_SIZE];
+  ulong saved_mode= thd->variables.sql_mode;
 
   CHARSET_INFO *db_cs= get_default_db_collation(thd, sp->m_db.str);
 
@@ -688,6 +693,9 @@ sp_create_routine(THD *thd, int type, sp_head *sp)
 
   DBUG_ASSERT(type == TYPE_ENUM_PROCEDURE ||
               type == TYPE_ENUM_FUNCTION);
+
+  /* Reset sql_mode during data dictionary operations. */
+  thd->variables.sql_mode= 0;
 
   /*
     This statement will be replicated as a statement, even when using
@@ -790,7 +798,7 @@ sp_create_routine(THD *thd, int type, sp_head *sp)
 
     store_failed= store_failed ||
       table->field[MYSQL_PROC_FIELD_SQL_MODE]->
-        store((longlong)thd->variables.sql_mode, TRUE);
+        store((longlong)saved_mode, TRUE);
 
     if (sp->m_chistics->comment.str)
     {
@@ -890,6 +898,7 @@ sp_create_routine(THD *thd, int type, sp_head *sp)
 
 done:
   thd->count_cuted_fields= saved_count_cuted_fields;
+  thd->variables.sql_mode= saved_mode;
 
   close_thread_tables(thd);
   DBUG_RETURN(ret);
